2010-02-24  Vladimir Serbinenko  <phcoder@gmail.com>

	* loader/i386/multiboot_mbi.c (grub_multiboot_set_bootdev): Fix a
	memory leak.
	Reported by: Seth Goldberg.

2010-02-24  Joey Korkames  <joey+lists@kidfixit.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Remove
	duplicate declaration of `start'.

2010-02-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* fs/iso9660.c (grub_iso9660_iterate_dir): Strip version from joliet
	filename.
	Reported by: Georgy Buranov

2010-02-20  Carles Pina i Estany  <carles@pina.cat>

	* util/grub-mkrawimage.c (usage): Change string formatting to
	improve gettext.

2010-02-20  Manoel Rebelo Abranches <mrabran@br.ibm.com>

	* term/ieee1275/ofconsole.c (grub_ofconsole_readkey): Add delete and
	backspace keys.

2010-02-20  Vladimir Serbinenko  <phcoder@gmail.com>

	* video/fb/video_fb.c (grub_video_fb_scroll): Fix a pixel size bug.
	Reported by: Michael Suchanek.

2010-02-18  Samuel Thibault  <samuel.thibault@ens-lyon.org>

	* util/grub-mkconfig.in: Export GRUB_INIT_TUNE.
	* util/grub.d/00_header.in: Handle GRUB_INIT_TUNE.

2010-02-16  Vladimir Serbinenko  <phcoder@gmail.com>

	Remove any reference to non-free fonts.

	* commands/videotest.c (grub_cmd_videotest): Use unifont by default.
	* docs/gfxmenu-theme-example.txt: Removed. It's both outdated and
	uses non-free components.
	* font/font.c (grub_font_get_name): Remove example name.
	* gfxmenu/gui_label.c (grub_gui_label_new): Use unifont by default.
	* gfxmenu/gui_list.c (grub_gui_list_new): Likewise.
	* gfxmenu/gui_progress_bar.c (grub_gui_progress_bar_new): Likewise.
	* gfxmenu/view.c (grub_gfxmenu_view_new): Likewise.

2010-02-16  Georgy Buranov <gburanov@gmail.com>

	* disk/efi/efidisk.c (grub_efidisk_get_device_name): Fix a typo.

2010-02-15  Vladimir Serbinenko  <phcoder@gmail.com>

	* term/serial.c (serial_get_divisor) [GRUB_MACHINE_MIPS_YEELOONG]:
	Double divisor.
	(serial_hw_init) [GRUB_MACHINE_MIPS_YEELOONG]: Don't enable advanced
	features.